--- a/documents/report/doc/introduction.tex
+++ b/documents/report/doc/introduction.tex
@@ -2,7 +2,7 @@
 \label{chap:introduction} 
 It is a well-known fact, that Sweden is a country with big variations of the
 daily hours of sun throughout the year. Far up north the sun does not set
-anymore in January. Even in Stockholm in January, the most dark month of the
+anymore in January. Even in Stockholm in January, the darkest month of the
 year, the sun rises at 8:47 am and sets at 2:55 pm
 (cf. \cite{other:visitsweden}). According to \myemph{Sveriges Radio} "many Swedes
 suffer from the winter blues or seasonal affective disorder" (cf.
@@ -16,15 +16,26 @@ This report describes the Swakeup (from engl. ”Swedish Wakeup Light”), a dev
 communicating to the user not only through light. It does not simply wake one
 up, but also gives one information about social media, latest mails, calendar
 and weather. The user interface consits besides of a high-power LED of an OLED
-screen. Swakeup is also part of the IoT as it has the ability to communicate via
-IEEE 802.11. This of course enables a lot of possibilities e.g. connecting your
-phone to the wakeup light. A lot of effort has been put into the designing
-maxim, that everything should be as small as possible. The whole electronics fit
-on an base area of 5 cm x 4 cm. So the Swakeup fits smoothly on the bedside
-table. And honestly: What is the last thing people are doing before they go to
-sleep? Right! They look on your phone. That is why Swakeup comes with a USB
-charger for your e.g. phone as well. Another design maxim of this product is
-cheapness. Everybody should be able to buy one. As all engineering work is
-available online, it gives people (with the corresponding knowledge) the
-opportunity to build a wakeup light themselves, look up what this device is
-doing with their personal data or even contribute to the product.
+screen. Swakeup is also part of the IoT as it has the ability to communicate
+via IEEE 802.11. This of course enables a lot of possibilities e.g. connecting
+your phone to the wakeup light. A lot of effort has been put into the designing
+maxim, that everything should be as small as possible. The whole electronics
+fit on an base area of 5 cm x 4 cm. So the Swakeup fits smoothly on the bedside
+table. And honestly: What is the last thing people do before they go to sleep?
+Right! They look on their phones. That is why Swakeup comes with a USB charger
+for your phone as well, so you do not have to leave the bed anymore. Another
+design maxim of this product is cheapness. Everybody should be able to buy one.
+As all engineering work is open-source, it gives people (with the
+corresponding knowledge) the opportunity to build a wakeup light themselves,
+look up what this device is doing with their personal data or even contribute
+to the product.
+
+\begin{figure}[H]
+		\centering
+		\label{fig:block_simp}
+		\includegraphics[width=0.2\textwidth]{./fig/github.jpg}
+		%\caption{Simplified blockdiagram of Swakeup.}
+\end{figure}
+\begin{center}
+\url{www.github.com/m3x1m0m/swakeup}
+\end{center}
